--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Backlog
+todo_backlog.txt
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
